--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-6 col-sm-4" id="number2guess">number</div>
+          <div class="col-6 col-sm-4" id="number2guess">Match this Number:</div>
           <div class="col-6 col-sm-4">
               <h3 id="wins">Wins</h3>
             <h3 id="losses">Losses</h3>
